ec2.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'vpc using CloudFormation'

Resources:
# My VPC
 myVPC:
  Type: AWS::EC2::VPC 
  Properties:
   CidrBlock: 172.16.0.0/16
   EnableDnsSupport: true
   EnableDnsHostnames: true
   Tags:
    - Key: Name 
      Value: myVPC 

# Public Subnet in AZ1
 PublicSubnet1A:
  Type: AWS::EC2::Subnet 
  Properties:
   VpcId: !Ref myVPC
   CidrBlock: 172.16.1.0/24
   AvailabilityZone: !Select [0, !GetAZs '']
   MapPublicIpOnLaunch: true 
   Tags:
    - Key: Name
      Value: PublicSubnet1A

#App Private Subnet in AZ1
 AppPrivateSubnet1A:
  Type: AWS::EC2::Subnet
  Properties:
   VpcId: !Ref myVPC
   CidrBlock: 172.16.2.0/24
   AvailabilityZone: !Select [0, !GetAZs '']
   Tags:
    - Key : Name 
      Value: AppPrivateSubnet1A

#Data Private Subnet in AZ1
 DataPrivateSubnet1A:
  Type: AWS::EC2::Subnet
  Properties:
   VpcId: !Ref myVPC
   CidrBlock: 172.16.3.0/24
   AvailabilityZone: !Select [0, !GetAZs '']
   Tags:
    - Key : Name 
      Value: DataPrivateSubnet1A


#Public Subnet in AZ2
 PublicSubnet2B:
  Type: AWS::EC2::Subnet
  Properties:
   VpcId: !Ref myVPC
   CidrBlock: 172.16.4.0/24
   AvailabilityZone: !Select [1, !GetAZs '']
   MapPublicIpOnLaunch: true
   Tags: 
    - Key : Name
      Value : PublicSubnet2B


# Private App Subnet in AZ2
 AppPrivateSubnet2B:
  Type: AWS::EC2::Subnet
  Properties:
   VpcId: !Ref myVPC
   CidrBlock: 172.16.5.0/24
   AvailabilityZone: !Select [1, !GetAZs '']
   Tags:
    - Key : Name 
      Value: AppPrivateSubnet2B


# Private App Subnet in AZ2
 DataPrivateSubnet2B:
  Type: AWS::EC2::Subnet
  Properties: 
   VpcId: !Ref myVPC
   CidrBlock: 172.16.6.0/24
   AvailabilityZone: !Select [1, !GetAZs '']
   Tags:
    - Key : Name
      Value : DataPrivateSubnet2B

#Iternet Gateway
 InternetGateway:
  Type: AWS::EC2::InternetGateway
  Properties: 
   Tags:
    - Key : Name
      Value: InternetGateway

#Attach IGW to VPC
 AttachGateway:
  Type: AWS::EC2::VPCGatewayAttachment
  Properties:
   VpcId: !Ref myVPC
   InternetGatewayId: !Ref InternetGateway


# Public Route Table
 PublicRouteTable:
  Type: AWS::EC2::RouteTable
  Properties:
   VpcId: !Ref myVPC
   Tags:
    - Key : Name
      Value: PublicRouteTable

# Routes
 PublicRoute:
  Type: AWS::EC2::Route
  Properties: 
   RouteTableId: !Ref PublicRouteTable
   DestinationCidrBlock: 0.0.0.0/0
   GatewayId: !Ref InternetGateway

# Public Subnet 1A Route Table Association

 PublicSubnet1ARouteTableAssociation:
  Type: AWS::EC2::SubnetRouteTableAssociation
  Properties:
   SubnetId: !Ref PublicSubnet1A
   RouteTableId: !Ref PublicRouteTable


# Public Subnet 2B Route Table Association

 PublicSubnet2BRouteTableAssociation:
  Type: AWS::EC2::SubnetRouteTableAssociation
  Properties:
   SubnetId: !Ref PublicSubnet2B
   RouteTableId: !Ref PublicRouteTable


# Application Load Balancer
 MyLoadBalancer:
  Type: AWS::ElasticLoadBalancingV2::LoadBalancer
  Properties: 
   Subnets:
     - !Ref PublicSubnet1A
     - !Ref PublicSubnet2B
   SecurityGroups:
     - !Ref WebServerSecurityGroup

# Target Group for ALB
 MyTargetGroup:
  Type: AWS::ElasticLoadBalancingV2::TargetGroup
  Properties:
    VpcId: !Ref myVPC
    Port: 80
    Protocol: HTTP
    Targets:
      - Id: !Ref WebServerInstance1A
      - Id: !Ref WebServerInstance2B
      - Id: !Ref WebServerInstance3B

# Listener for ALB
 MyListener:
  Type: AWS::ElasticLoadBalancingV2::Listener
  Properties: 
    DefaultActions:
      - Type: forward
        TargetGroupArn: !Ref MyTargetGroup
    LoadBalancerArn: !Ref MyLoadBalancer
    Port: 80
    Protocol: HTTP

# Web Server / ALB Security Group
 WebServerSecurityGroup:
  Type: AWS::EC2::SecurityGroup
  Properties:
    GroupDescription: Enable HTTP access
    VpcId: !Ref myVPC
    SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0


# WebServerInstance1A
 WebServerInstance1A:
  Type: AWS::EC2::Instance
  Properties:
   InstanceType: t3.micro
   ImageId: ami-0d3d85815a9746bc5
   SubnetId: !Ref PublicSubnet1A
   SecurityGroupIds:
     - !Ref WebServerSecurityGroup
   Tags:
    - Key: Name
      Value: WebServerInstance1A
   UserData:
     Fn::Base64: !Sub |
      #!/bin/bash 
      yum install -y httpd 
      systemctl start httpd
      systemctl enable httpd
      echo "Hello from My Web Server 1A" > /var/www/html/index.html


# WebServerInstance2B
 WebServerInstance2B:
  Type: AWS::EC2::Instance
  Properties:
   InstanceType: t3.micro
   ImageId: ami-0d3d85815a9746bc5
   SubnetId: !Ref PublicSubnet2B
   SecurityGroupIds:
     - !Ref WebServerSecurityGroup
   Tags:
    - Key: Name
      Value: WebServerInstance2B
   UserData:
     Fn::Base64: !Sub |
      #!/bin/bash 
      yum install -y httpd 
      systemctl start httpd
      systemctl enable httpd
      echo "Hello from My Web Server 2B" > /var/www/html/index.html

# WebServerInstance3B
 WebServerInstance3B:
  Type: AWS::EC2::Instance
  Properties:
   InstanceType: t3.micro
   ImageId: ami-0d3d85815a9746bc5
   SubnetId: !Ref PublicSubnet2B
   SecurityGroupIds:
     - !Ref WebServerSecurityGroup
   Tags:
    - Key: Name
      Value: WebServerInstance3B
   UserData:
     Fn::Base64: !Sub |
      #!/bin/bash 
      yum install -y httpd 
      systemctl start httpd
      systemctl enable httpd
      echo "Hello from My Web Server 3B" > /var/www/html/index.html
